# invoice-pipeline

./: .env.production  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yaml  docker-compose.yml  pyproject.toml
docs/: DESIGN_DOC.md  RUNBOOK.md
migrations/: 001_initial_schema.sql
scripts/: generate_sample_invoice.py
src/: config.py  db.py  pipeline.py
src/api/: main.py
src/extraction/: make_test_invoice.py  ocr_client.py  parser.py
src/intake/: file_handler.py  watcher.py
src/normalization/: schema.py  transformer.py
src/observability/: logger.py  retry.py
src/routing/: approver.py  notifier.py
src/validation/: engine.py  rules.py
tests/unit/: test_normalization.py  test_validation.py
