[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invoice-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "prefect>=2.19",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "psycopg[binary]>=3.1",
    "boto3>=1.34",
    "httpx>=0.27",
    "structlog>=24.1",
    "tenacity>=8.3",
    "python-dotenv>=1.0",
    "watchdog>=4.0",
    "python-dateutil>=2.9",
    "rapidfuzz>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.hatch.build.targets.wheel]
packages = ["src"]